--- a/app/src/main/res/layout/activity_inf.xml
+++ b/app/src/main/res/layout/activity_inf.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Coordenadas: "
+        android:text="@string/coordenadas"
         android:textSize="15sp"
         android:layout_below="@+id/textView14"
         android:layout_alignParentLeft="true"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView16"
-        android:text=", "
+        android:text="@string/virgula"
         android:layout_toRightOf="@+id/textLat"
         android:layout_toEndOf="@+id/textLat"
         android:textSize="15sp"/>
@@ -89,7 +89,7 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data de criação: "
+        android:text="@string/data_de_cria_o"
         android:layout_below="@+id/textLng"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -106,11 +106,11 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_marginTop="23dp"
+        android:text="@string/morada"
         android:layout_below="@+id/textView11"
-        android:layout_marginTop="24dp"
-        android:text="Morada: " />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textMorada"
@@ -126,12 +126,12 @@
         android:layout_height="wrap_content"
         android:onClick="MudarOnClick"
         android:text="Mudar"
-        android:layout_marginLeft="39dp"
-        android:layout_marginStart="39dp"
-        android:layout_alignBaseline="@+id/btnDelete"
-        android:layout_alignBottom="@+id/btnDelete"
-        android:layout_toRightOf="@+id/btnDelete"
-        android:layout_toEndOf="@+id/btnDelete" />
+        android:layout_marginTop="58dp"
+        android:layout_marginRight="82dp"
+        android:layout_marginEnd="82dp"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/btnDelete"
@@ -139,22 +139,20 @@
         android:layout_height="wrap_content"
         android:onClick="DeleteOnClick"
         android:text="Delete"
-        android:layout_below="@+id/imageView7"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="34dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="61dp" />
+        android:layout_alignBaseline="@+id/btnMudar"
+        android:layout_alignBottom="@+id/btnMudar"
+        android:layout_toLeftOf="@+id/btnMudar"
+        android:layout_toStartOf="@+id/btnMudar" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="38dp"
-        app:srcCompat="@mipmap/ponto"
-        android:layout_below="@+id/textView15"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignEnd="@+id/textView11"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textView11"
+        android:layout_below="@+id/textView15"
+        android:layout_marginTop="38dp"
+        app:srcCompat="@mipmap/ponto" />
 </RelativeLayout>
