--- a/app/src/main/res/layout/activity_mudar.xml
+++ b/app/src/main/res/layout/activity_mudar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -55,11 +56,33 @@
         android:id="@+id/btnUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/inserirdesc"
-        android:layout_marginTop="66dp"
-        android:layout_toEndOf="@+id/textView10"
-        android:layout_toRightOf="@+id/textView10"
+        android:layout_marginTop="16dp"
         android:onClick="UpdateOnClick"
-        android:text="Salvar" />
+        android:text="Salvar"
+        android:layout_below="@+id/FotoMuda"
+        android:layout_toRightOf="@+id/textView10"
+        android:layout_toEndOf="@+id/textView10" />
+
+    <ImageView
+        android:id="@+id/FotoMuda"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignLeft="@+id/inserirdesc"
+        android:layout_alignStart="@+id/inserirdesc"
+        android:layout_below="@+id/inserirdesc"
+        android:layout_marginTop="21dp"
+        app:srcCompat="@mipmap/ponto" />
+
+    <Button
+        android:id="@+id/MudarImagem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="MudarImagem"
+        android:text="Mudar Imagem"
+        android:layout_alignTop="@+id/FotoMuda"
+        android:layout_toRightOf="@+id/textView12"
+        android:layout_alignRight="@+id/inserirdesc"
+        android:layout_alignEnd="@+id/inserirdesc"
+        android:layout_alignBottom="@+id/FotoMuda" />
 
 </RelativeLayout>
