--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,8 @@
         android:id="@+id/textView2"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textSize="18dp"/>
+        android:textSize="18dp"
+        tools:ignore="SpUsage" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,7 +28,8 @@
         android:id="@+id/textView8"
         android:textSize="18dp"
         android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        tools:ignore="SpUsage" />
 
     <ImageView
         android:layout_width="230dp"
@@ -37,5 +39,6 @@
         android:adjustViewBounds = "true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="63dp" />
+        android:layout_marginTop="63dp"
+        tools:ignore="ContentDescription" />
 </RelativeLayout>
